First working progress to the products

--- a/index.html
+++ b/index.html
@@ -4,8 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Boolando</title>
 </head>
 <body>
+    <!-- Inizio main -->
+    <main>
+        <section>
+            <!-- Inizio container principale -->
+            <div class="container">
+               <!-- Inizio flex container -->
+               <div class="flex-container">
+                    <div class="col">
+                        <div class="product">
+                            <img src="./img/1.webp" alt="">
+                            <p class="brand">Levi's</p>
+                            <p class="description">Relaxed fit tee unisex</p>
+                            <span class="cost">14,99 &euro;<span class="old-cost"> 29,99 &euro;</span></span>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="./img/2.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="./img/3.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="./img/4.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="./img/5.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="./img/6.webp" alt="">
+                        </div>
+                    </div>
+               </div>
+               <!-- Fine flex container -->
+            </div>
+            <!-- Fine container principale -->
+        </section>
+        </main>
+        <!-- Fine main -->
 </body>
 </html>
