--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Boolando</title>
 </head>
@@ -15,37 +18,77 @@
             <div class="container">
                <!-- Inizio flex container -->
                <div class="flex-container">
+                   <!-- Primo riquadro -->
                     <div class="col">
                         <div class="product">
+                            <!-- Foto prodotto -->
                             <img src="./img/1.webp" alt="">
+                            <!-- Brand del prodotto -->
                             <p class="brand">Levi's</p>
-                            <p class="description">Relaxed fit tee unisex</p>
+                            <!-- Nome prodotto -->
+                            <p class="name">Relaxed fit tee unisex</p>
+                            <!-- Costo -->
                             <span class="cost">14,99 &euro;<span class="old-cost"> 29,99 &euro;</span></span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
+                            <!-- Foto prodotto -->
                             <img src="./img/2.webp" alt="">
+                            <!-- Brand del prodotto -->
+                            <p class="brand">Guess</p>
+                            <!-- Nome prodotto -->
+                            <p class="name">Roses Tee</p>
+                            <!-- Costo -->
+                            <span class="cost">20,99 &euro;<span class="old-cost"> 29,99 &euro;</span></span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
+                            <!-- Foto prodotto -->
                             <img src="./img/3.webp" alt="">
+                            <!-- Brand del prodotto -->
+                            <p class="brand">Come zucchero zilato</p>
+                            <!-- Nome prodotto -->
+                            <p class="name">Voglia di colori pastello</p>
+                            <!-- Costo -->
+                            <span class="cost">129,99 &euro;<span class="old-cost"></span></span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
+                            <!-- Foto prodotto -->
                             <img src="./img/4.webp" alt="">
+                            <!-- Brand del prodotto -->
+                            <p class="brand">Levi's</p>
+                            <!-- Nome prodotto -->
+                            <p class="name">Tee unisex</p>
+                            <!-- Costo -->
+                            <span class="cost">14,99 &euro;<span class="old-cost"> 29,99 &euro;</span></span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
+                            <!-- Foto prodotto -->
                             <img src="./img/5.webp" alt="">
+                            <!-- Brand del prodotto -->
+                            <p class="brand">Maya delux</p>
+                            <!-- Nome prodotto -->
+                            <p class="name">Stripe bodice</p>
+                            <!-- Costo -->
+                            <span class="cost">99,99 &euro;<span class="old-cost"></span></span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
+                            <!-- Foto prodotto -->
                             <img src="./img/6.webp" alt="">
+                            <!-- Brand del prodotto -->
+                            <p class="brand">Esprit</p>
+                            <!-- Nome prodotto -->
+                            <p class="name">Maglione - black</p>
+                            <!-- Costo -->
+                            <span class="cost">29,99 &euro;<span class="old-cost"></span></span>
                         </div>
                     </div>
                </div>
