All products finished

--- a/index.html
+++ b/index.html
@@ -22,73 +22,98 @@
                     <div class="col">
                         <div class="product">
                             <!-- Foto prodotto -->
-                            <img src="./img/1.webp" alt="">
+                            <div class="image-product">
+                                <img src="./img/1.webp" alt="Foto 'Relaxed Fit Tee Unisex'">
+                            <span class="discount bg-red">-50&percnt;</span>
+                            <span class="tag bg-green">Sonstenibilit&agrave;</span>
+                            <span class="heart">&hearts;</span>
+                            </div>
                             <!-- Brand del prodotto -->
                             <p class="brand">Levi's</p>
                             <!-- Nome prodotto -->
                             <p class="name">Relaxed fit tee unisex</p>
                             <!-- Costo -->
-                            <span class="cost">14,99 &euro;<span class="old-cost"> 29,99 &euro;</span></span>
+                            <p class="cost">14,99 &euro;<span class="old-cost"> 29,99 &euro;</span></p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <!-- Foto prodotto -->
-                            <img src="./img/2.webp" alt="">
+                            <div class="image-product">
+                                <img src="./img/2.webp" alt="Foto 'Roses Tee'">
+                            <span class="discount bg-red">-30&percnt;</span>
+                            <span class="heart">&hearts;</span>
+                            </div>
                             <!-- Brand del prodotto -->
                             <p class="brand">Guess</p>
                             <!-- Nome prodotto -->
                             <p class="name">Roses Tee</p>
                             <!-- Costo -->
-                            <span class="cost">20,99 &euro;<span class="old-cost"> 29,99 &euro;</span></span>
+                            <p class="cost">20,99 &euro;<span class="old-cost"> 29,99 &euro;</span></p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <!-- Foto prodotto -->
-                            <img src="./img/3.webp" alt="">
+                            <div class="image-product">
+                                <img src="./img/3.webp" alt="Foto 'Voglia di Colori Pastello'">
+                            <span class="discount bg-red">-30&percnt;</span>
+                            <span class="heart">&hearts;</span>
+                            </div>
                             <!-- Brand del prodotto -->
                             <p class="brand">Come zucchero zilato</p>
                             <!-- Nome prodotto -->
                             <p class="name">Voglia di colori pastello</p>
                             <!-- Costo -->
-                            <span class="cost">129,99 &euro;<span class="old-cost"></span></span>
+                            <p class="cost">129,99 &euro;<span class="old-cost"></span></p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <!-- Foto prodotto -->
-                            <img src="./img/4.webp" alt="">
+                            <div class="image-product">
+                                <img src="./img/4.webp" alt="Foto 'Tee Unisex'">
+                            <span class="discount bg-red">-50&percnt;</span>
+                            <span class="tag bg-green">Sonstenibilit&agrave;</span>
+                            <span class="heart">&hearts;</span>
+                            </div>
                             <!-- Brand del prodotto -->
                             <p class="brand">Levi's</p>
                             <!-- Nome prodotto -->
                             <p class="name">Tee unisex</p>
                             <!-- Costo -->
-                            <span class="cost">14,99 &euro;<span class="old-cost"> 29,99 &euro;</span></span>
+                            <p class="cost">14,99 &euro;<span class="old-cost"> 29,99 &euro;</span></p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <!-- Foto prodotto -->
-                            <img src="./img/5.webp" alt="">
+                            <div class="image-product">
+                                <img src="./img/5.webp" alt="Foto 'Stripe Bondice'">
+                            <span class="heart">&hearts;</span>
+                            </div>
                             <!-- Brand del prodotto -->
                             <p class="brand">Maya delux</p>
                             <!-- Nome prodotto -->
                             <p class="name">Stripe bodice</p>
                             <!-- Costo -->
-                            <span class="cost">99,99 &euro;<span class="old-cost"></span></span>
+                            <p class="cost">99,99 &euro;<span class="old-cost"></span></p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <!-- Foto prodotto -->
-                            <img src="./img/6.webp" alt="">
+                            <div class="image-product">
+                                <img src="./img/6.webp" alt="Foto 'Maglione-Black'">
+                            <span class="tag bg-green">Sonstenibilit&agrave;</span>
+                            <span class="heart">&hearts;</span>
+                            </div>
                             <!-- Brand del prodotto -->
                             <p class="brand">Esprit</p>
                             <!-- Nome prodotto -->
                             <p class="name">Maglione - black</p>
                             <!-- Costo -->
-                            <span class="cost">29,99 &euro;<span class="old-cost"></span></span>
+                            <p class="cost">29,99 &euro;<span class="old-cost"></span></p>
                         </div>
                     </div>
                </div>
