--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                    <!-- Primo riquadro -->
                     <div class="col">
                         <div class="product">
-                            <!-- Foto prodotto -->
+                            <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
                                 <img src="./img/1.webp" alt="Foto 'Relaxed Fit Tee Unisex'">
-                            <span class="discount bg-red">-50&percnt;</span>
-                            <span class="tag bg-green">Sonstenibilit&agrave;</span>
+                            <span class="tag discount bg-red">-50&percnt;</span>
+                            <span class="tag product-sustainability bg-green">Sonstenibilit&agrave;</span>
                             <span class="heart">&hearts;</span>
                             </div>
                             <!-- Brand del prodotto -->
@@ -38,10 +38,10 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <!-- Foto prodotto -->
+                            <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
                                 <img src="./img/2.webp" alt="Foto 'Roses Tee'">
-                            <span class="discount bg-red">-30&percnt;</span>
+                            <span class="tag discount bg-red">-30&percnt;</span>
                             <span class="heart">&hearts;</span>
                             </div>
                             <!-- Brand del prodotto -->
@@ -54,10 +54,10 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <!-- Foto prodotto -->
+                            <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
                                 <img src="./img/3.webp" alt="Foto 'Voglia di Colori Pastello'">
-                            <span class="discount bg-red">-30&percnt;</span>
+                            <span class="tag discount bg-red">-30&percnt;</span>
                             <span class="heart">&hearts;</span>
                             </div>
                             <!-- Brand del prodotto -->
@@ -70,11 +70,11 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <!-- Foto prodotto -->
+                            <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
                                 <img src="./img/4.webp" alt="Foto 'Tee Unisex'">
-                            <span class="discount bg-red">-50&percnt;</span>
-                            <span class="tag bg-green">Sonstenibilit&agrave;</span>
+                            <span class="tag discount bg-red">-50&percnt;</span>
+                            <span class="tag product-sustainability bg-green">Sonstenibilit&agrave;</span>
                             <span class="heart">&hearts;</span>
                             </div>
                             <!-- Brand del prodotto -->
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <!-- Foto prodotto -->
+                            <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
                                 <img src="./img/5.webp" alt="Foto 'Stripe Bondice'">
                             <span class="heart">&hearts;</span>
@@ -102,10 +102,10 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <!-- Foto prodotto -->
+                            <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
                                 <img src="./img/6.webp" alt="Foto 'Maglione-Black'">
-                            <span class="tag bg-green">Sonstenibilit&agrave;</span>
+                            <span class="tag product-sustainability bg-green">Sonstenibilit&agrave;</span>
                             <span class="heart">&hearts;</span>
                             </div>
                             <!-- Brand del prodotto -->
