Exercise + BONUS FULLY completed

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -23,6 +23,7 @@
                         <div class="product">
                             <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
+                                <img class="img-bg" src="./img/1b.webp" alt="Foto 'Relaxed Fit Tee Unisex'">
                                 <img src="./img/1.webp" alt="Foto 'Relaxed Fit Tee Unisex'">
                                 <div class="tag">
                                     <span class="discount bg-red">-50&percnt;</span>
@@ -42,6 +43,7 @@
                         <div class="product">
                             <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
+                                <img class="img-bg" src="./img/2b.webp" alt="Foto 'Roses Tee'">
                                 <img src="./img/2.webp" alt="Foto 'Roses Tee'">
                                 <div class="tag">
                                     <span class="discount bg-red">-30&percnt;</span>
@@ -60,6 +62,7 @@
                         <div class="product">
                             <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
+                                <img class="img-bg" src="./img/3b.webp" alt="Foto 'Voglia di Colori Pastello'">
                                 <img src="./img/3.webp" alt="Foto 'Voglia di Colori Pastello'">
                                 <div class="tag">
                                     <span class="discount bg-red">-30&percnt;</span>
@@ -78,6 +81,7 @@
                         <div class="product">
                             <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
+                                <img class="img-bg" src="./img/4b.webp" alt="Foto 'Tee Unisex'">
                                 <img src="./img/4.webp" alt="Foto 'Tee Unisex'">
                                 <div class="tag">
                                     <span class="discount bg-red">-50&percnt;</span>
@@ -97,6 +101,7 @@
                         <div class="product">
                             <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
+                                <img class="img-bg" src="./img/5b.webp" alt="Foto 'Stripe Bondice'">
                                 <img src="./img/5.webp" alt="Foto 'Stripe Bondice'">
                             <span class="heart">&hearts;</span>
                             </div>
@@ -112,6 +117,7 @@
                         <div class="product">
                             <!-- Foto prodotto con relativi ed eventuali tag -->
                             <div class="image-product">
+                                <img class="img-bg" src="./img/6b.webp" alt="Foto 'Maglione-Black'">
                                 <img src="./img/6.webp" alt="Foto 'Maglione-Black'">
                                 <div class="tag">
                                     <span class="product-sustainability bg-green">Sonstenibilit&agrave;</span>
@@ -131,7 +137,7 @@
             </div>
             <!-- Fine container principale -->
         </section>
-        </main>
+    </main>
         <!-- Fine main -->
 </body>
 </html>
